<resources>
    <string name="app_name">TD2</string>
    <string name="hello_world">Salut tout le monde !</string>
    <string name="toto">Toto</string>
    <string name="ok">OK</string>
    <string name="cancel">Annuler</string>
    <string name="cancel_all">Annuler tout</string>
    <string name="mot_de_passe">Mot de passe...</string>
    <string name="entree">Saisir l\'entrée...</string>
    <string name="principal">Saisir le plat principal...</string>
    <string name="fruit">Fruit</string>
    <string name="fromage">Fromage</string>
    <string name="soir">Soir</string>
    <string name="midi">Midi</string>
    <string name="valider">Valider</string>
    <string name="aliment_supplementaire">Aliment(s) supplémentaire(s) :</string>
    <string name="moment_de_la_journee">Moment de la journée :</string>
    <string name="plats_consommes">Plats consommés :</string>
    <string name="Select_temp">Saisissez une température en degré Celsius</string>
    <string name="saisir_heure">Saisissez l\'heure du relevé :</string>
    <string name="saisir_date">Saisissez la date du relevé :</string>
    <string name="saisir_vitesse_vent">Saisissez la vitesse du vent (km/h) :</string>
    <string name="saisir_temperature">Saisissez la température (°C) :</string>
    <string name="saisir_meteo">Saisissez la météo du jour :</string>
        <string-array name="meteo">
            <item>Dégagé</item>
            <item>Couvert</item>
            <item>Pluvieux</item>
        </string-array>
</resources>