<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:orientation="horizontal"
    android:layout_height="match_parent"
    android:id="@+id/repas">
    <EditText
        android:id="@+id/entree"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/entree"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"/>
    <EditText
        android:id="@+id/principal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/principal"
        app:layout_constraintTop_toBottomOf="@id/entree"/>
    <CheckBox
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/eat_cheese"
        android:text="@string/fromage"
        app:layout_constraintTop_toBottomOf="@id/principal"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"/>
    <CheckBox
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/eat_fruit"
        android:text="@string/fruit"
        app:layout_constraintTop_toBottomOf="@id/principal"
        app:layout_constraintLeft_toRightOf="@id/eat_cheese"
        app:layout_constraintRight_toRightOf="parent"/>
    <RadioGroup
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/midisoir"
        app:layout_constraintTop_toBottomOf="@id/eat_cheese"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toLeftOf="parent">
        <RadioButton
            android:id="@+id/midi"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/midi"/>
        <RadioButton
            android:id="@+id/soir"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/soir"/>
    </RadioGroup>
    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/valider"
        android:text="@string/valider"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@id/midisoir"/>
    <Button
        android:id="@+id/annuler"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/cancel"
        app:layout_constraintTop_toBottomOf="@id/midisoir"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        />
</androidx.constraintlayout.widget.ConstraintLayout>