<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            app:layout_constraintTop_toTopOf="parent"
            android:id="@+id/texte_date"
            android:text="@string/saisir_date"/>
        <DatePicker
            android:id="@+id/date"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="45dp"
            android:scaleX="1.2"
            android:scaleY="1.2"
            app:layout_constraintTop_toBottomOf="@id/texte_date"/>
        <TextView
            android:layout_marginTop="15dp"
            android:layout_width="match_parent"
            android:gravity="center"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/date"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            android:id="@+id/texte_heure"
            android:text="@string/saisir_heure"/>
        <TimePicker
            android:id="@+id/heure"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/texte_heure" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/zone_vent"
            android:orientation="horizontal"
            app:layout_constraintTop_toBottomOf="@id/heure">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_weight="0.7"
                android:text="@string/saisir_vitesse_vent"/>
            <NumberPicker
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_weight="0.85" />
        </LinearLayout>
        <LinearLayout
            android:id="@+id/zone_temperature"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintTop_toBottomOf="@id/zone_vent">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_weight="0.7"
                android:text="@string/saisir_temperature" />

            <NumberPicker
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_weight="0.85" />
        </LinearLayout>
        <LinearLayout
            android:id="@+id/zone_meteo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintTop_toBottomOf="@id/zone_temperature">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_weight="0.7"
                android:text="@string/saisir_meteo"/>
            <Spinner
                android:id="@+id/meteo"
                android:textAlignment="center"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_weight="0.85"/>
        </LinearLayout>


        <LinearLayout
            android:layout_marginTop="15dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/zone_meteo">
            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/valider"
                android:text="@string/valider"
                android:layout_weight="1"
                />
            <Button
                android:id="@+id/annuler"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/cancel"
                android:layout_weight="1"
                />
        </LinearLayout>
    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>